[gd_scene load_steps=14 format=3 uid="uid://db36qb637c3ad"]

[ext_resource type="Script" path="res://mob/MobSpawnLocation2.gd" id="1_k7h2g"]
[ext_resource type="Script" path="res://mob/spawn_locations/MobV2.gd" id="2_cidjc"]
[ext_resource type="Texture2D" uid="uid://b034jhe6fwg4f" path="res://assets/enemy/idle/0.png" id="3_yyeoc"]
[ext_resource type="Texture2D" uid="uid://dw3s74krqs3tf" path="res://assets/enemy/idle/1.png" id="4_lx632"]
[ext_resource type="Texture2D" uid="uid://cxo0si5mrgf3y" path="res://assets/enemy/idle/2.png" id="5_grk2c"]
[ext_resource type="Texture2D" uid="uid://bprixvx4yp01w" path="res://assets/enemy/idle/3.png" id="6_c7vqi"]
[ext_resource type="Texture2D" uid="uid://dt17tqdn2qx1s" path="res://assets/enemy/idle/4.png" id="7_1ix6t"]
[ext_resource type="Texture2D" uid="uid://ccr4ptb84k7of" path="res://assets/enemy/idle/5.png" id="8_fwuv6"]
[ext_resource type="AudioStream" uid="uid://6j58ub0ls72i" path="res://sounds/Retro_8-Bit_Game-Hit_Hurt_Fall_Drop_08.wav" id="9_2d5jq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ldo76"]

[sub_resource type="SpriteFrames" id="SpriteFrames_q8xt8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_yyeoc")
}, {
"duration": 1.0,
"texture": ExtResource("4_lx632")
}, {
"duration": 1.0,
"texture": ExtResource("5_grk2c")
}, {
"duration": 1.0,
"texture": ExtResource("6_c7vqi")
}, {
"duration": 1.0,
"texture": ExtResource("7_1ix6t")
}, {
"duration": 1.0,
"texture": ExtResource("8_fwuv6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CanvasTexture" id="CanvasTexture_7nfa0"]

[sub_resource type="CanvasTexture" id="CanvasTexture_e43wh"]

[node name="MobSpawnLocation2" type="PathFollow2D"]
position = Vector2(276, 824)
rotation = 1.49949
rotates = false
loop = false
script = ExtResource("1_k7h2g")

[node name="Mob2" type="RigidBody2D" parent="."]
rotation = -1.49949
freeze = true
script = ExtResource("2_cidjc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mob2"]
shape = SubResource("CapsuleShape2D_ldo76")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Mob2"]
sprite_frames = SubResource("SpriteFrames_q8xt8")
frame_progress = 0.446136

[node name="HealthBar" type="TextureProgressBar" parent="Mob2"]
offset_left = -10.0
offset_top = -16.0
offset_right = 11.0
offset_bottom = -13.0
value = 50.0
nine_patch_stretch = true
texture_under = SubResource("CanvasTexture_7nfa0")
texture_progress = SubResource("CanvasTexture_e43wh")
tint_under = Color(0.313726, 0.313726, 0.313726, 1)
tint_progress = Color(1, 0.129412, 0.0588235, 1)
metadata/_edit_use_anchors_ = true

[node name="Mob2_" type="StaticBody2D" parent="."]
visible = false

[node name="51339" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="on_hit_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_2d5jq")
